--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^4.13.0",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
+    "showdown": "^1.9.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
